k8s/podscriber/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podscriber-web
  namespace: podscriber
  labels:
    app: podscriber-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podscriber-web
  template:
    metadata:
      labels:
        app: podscriber-web
    spec:
      serviceAccount: podscriber
      containers:
      - name: web
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        image: us.gcr.io/oddmark-stage/podscriber-web:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
