k8s/podscriber/web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podscriber-web
spec:
  selector:
    app: podscriber-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
